--- a/src/main/resources/fxml/AdministradorView.fxml
+++ b/src/main/resources/fxml/AdministradorView.fxml
@@ -1,87 +1,84 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <VBox prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.controller.AdministradorViewController">
    <children>
       <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" style="-fx-background-color: #2c2c2c;" VBox.vgrow="ALWAYS">
          <children>
-            <VBox alignment="CENTER" prefHeight="700.0" prefWidth="900.0">
+            <AnchorPane prefHeight="701.0" prefWidth="317.0">
                <children>
-                  <HBox alignment="CENTER" prefHeight="186.0" prefWidth="900.0">
-                     <children>
-                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../images/dumbbells%201.png" />
-                           </image>
-                           <HBox.margin>
-                              <Insets left="10.0" right="200.0" />
-                           </HBox.margin>
-                        </ImageView>
-                        <ImageView fitHeight="150.0" fitWidth="200.0" opacity="0.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../images/imagesMenu/Design%20sem%20nome%20(2)%201.png" />
-                           </image>
-                           <HBox.margin>
-                              <Insets right="200.0" />
-                           </HBox.margin>
-                        </ImageView>
-                        <AnchorPane prefHeight="138.0" prefWidth="150.0">
-                           <children>
-                              <ImageView fitHeight="150.0" fitWidth="165.0" layoutY="18.0" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="18.0">
-                                 <image>
-                                    <Image url="@../images/Design%20sem%20nome%20(6)%201.png" />
-                                 </image>
-                              </ImageView>
-                              <Button fx:id="BSairDoApp" layoutX="3.0" layoutY="22.0" mnemonicParsing="false" onAction="#handleSair" prefHeight="142.0" prefWidth="143.0" style="-fx-background-color: transparent;" text="" />
-                           </children>
-                        </AnchorPane>
-                     </children>
-                     <VBox.margin>
-                        <Insets bottom="80.0" />
-                     </VBox.margin>
-                  </HBox>
-                  <Button fx:id="BListarUsuarios" mnemonicParsing="false" onAction="#handleListarUsuarios" prefHeight="50.0" prefWidth="500.0" style="-fx-background-color: #1e1e1e;" text="Listar Usuários" textFill="#e5a000">
+                  <Button fx:id="BListarUsuarios" layoutX="67.0" layoutY="189.0" mnemonicParsing="false" onAction="#handleListarUsuarios" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1e1e1e;" text="Listar Usuários" textFill="#e5a000">
                      <font>
-                        <Font size="15.0" />
-                     </font>
-                     <VBox.margin>
-                        <Insets bottom="20.0" top="20.0" />
-                     </VBox.margin>
-                  </Button>
-                  <Button fx:id="BPromoverUsuario" mnemonicParsing="false" onAction="#handlePromoverUsuario" prefHeight="50.0" prefWidth="500.0" style="-fx-background-color: #1e1e1e;" text="Promover Usuário a Admin" textFill="#e5a000">
-                     <VBox.margin>
-                        <Insets bottom="20.0" />
-                     </VBox.margin>
-                     <font>
-                        <Font size="15.0" />
+                        <Font name="System Bold" size="15.0" />
                      </font>
                   </Button>
-                  <Button fx:id="BRebaixarUsuario" mnemonicParsing="false" onAction="#handleRebaixarUsuario" prefHeight="50.0" prefWidth="500.0" style="-fx-background-color: #1e1e1e;" text="Rebaixar Usuário a Comum" textFill="#e5a000">
-                     <VBox.margin>
-                        <Insets bottom="20.0" />
-                     </VBox.margin>
+                  <Button fx:id="BPromoverUsuario" layoutX="67.0" layoutY="256.0" mnemonicParsing="false" onAction="#handlePromoverUsuario" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1e1e1e;" text="Promover Usuário a Admin" textFill="#e5a000">
                      <font>
-                        <Font size="15.0" />
+                        <Font name="System Bold" size="15.0" />
                      </font>
                   </Button>
-                  <Button fx:id="BRemoverUsuario" mnemonicParsing="false" onAction="#handleRemoverUsuario" prefHeight="50.0" prefWidth="500.0" style="-fx-background-color: #1e1e1e;" text="Remover Usuário" textFill="#e5a000">
-                     <VBox.margin>
-                        <Insets bottom="120.0" />
-                     </VBox.margin>
+                  <Button fx:id="BRebaixarUsuario" layoutX="67.0" layoutY="323.0" mnemonicParsing="false" onAction="#handleRebaixarUsuario" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1e1e1e;" text="Rebaixar Usuário a Comum" textFill="#e5a000">
                      <font>
-                        <Font size="15.0" />
+                        <Font name="System Bold" size="15.0" />
                      </font>
                   </Button>
+                  <Button fx:id="BRemoverUsuario" layoutX="67.0" layoutY="388.0" mnemonicParsing="false" onAction="#handleRemoverUsuario" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1e1e1e;" text="Remover Usuário" textFill="#e5a000">
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font>
+                  </Button>
+                  <Separator layoutX="311.0" layoutY="1.0" orientation="VERTICAL" prefHeight="700.0" prefWidth="21.0" />
+                  <ImageView fitHeight="56.0" fitWidth="46.0" layoutX="14.0" layoutY="186.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/logo_registro.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="20.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/logo_app.png" />
+                     </image>
+                  </ImageView>
+                  <Separator layoutY="116.0" prefHeight="3.0" prefWidth="322.0" />
+                  <Text fill="#e5a000" layoutX="117.0" layoutY="72.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gym System">
+                     <font>
+                        <Font name="System Bold" size="24.0" />
+                     </font>
+                  </Text>
+                  <ImageView fitHeight="56.0" fitWidth="46.0" layoutX="14.0" layoutY="253.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/logo_registro.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="56.0" fitWidth="46.0" layoutX="14.0" layoutY="320.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/logo_registro.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="56.0" fitWidth="46.0" layoutX="14.0" layoutY="385.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/logo_registro.png" />
+                     </image>
+                  </ImageView>
                </children>
-            </VBox>
+            </AnchorPane>
+            <AnchorPane layoutX="781.0" layoutY="-6.0" prefHeight="80.0" prefWidth="100.0">
+               <children>
+                  <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="15.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="22.0">
+                     <image>
+                        <Image url="@../images/sair.png" />
+                     </image>
+                  </ImageView>
+                  <Button fx:id="BSairDoApp" layoutX="5.0" layoutY="11.0" mnemonicParsing="false" onAction="#handleSair" prefHeight="80.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="" />
+               </children>
+            </AnchorPane>
          </children>
       </AnchorPane>
    </children>
