--- a/src/main/resources/fxml/IndicadoresView.fxml
+++ b/src/main/resources/fxml/IndicadoresView.fxml
@@ -1,69 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<VBox prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.controller.IndicadoresViewController">
-  <children>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" style="-fx-background-color: #2C2C2C;">
-      <children>
-            <VBox alignment="TOP_CENTER" prefHeight="700.0" prefWidth="900.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-               <children>
-                  <HBox alignment="CENTER" prefHeight="186.0" prefWidth="900.0">
-                     <children>
-                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@/images/imagesMenu/dumbbells 1.png" />
-                           </image>
-                           <HBox.margin>
-                              <Insets left="10.0" right="200.0" />
-                           </HBox.margin>
-                        </ImageView>
-                        <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@/images/imagesMenu/Design sem nome (2) 1.png" />
-                           </image>
-                           <HBox.margin>
-                              <Insets right="200.0" />
-                           </HBox.margin>
-                        </ImageView>
-                        <AnchorPane prefHeight="138.0" prefWidth="150.0">
-                           <children>
-                              <ImageView fx:id="IFechar" fitHeight="150.0" fitWidth="165.0" layoutY="18.0" onMouseClicked="#voltar" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="18.0">
-                                 <image>
-                                    <Image url="@/images/imagesMenu/Design sem nome (6) 1.png" />
-                                 </image>
-                              </ImageView>
-                              <Button fx:id="sairB" layoutX="3.0" layoutY="22.0" mnemonicParsing="false" onAction="#handleSair" prefHeight="142.0" prefWidth="143.0" style="-fx-background-color: transparent;" text="" />
-                           </children>
-                        </AnchorPane>
-                     </children>
-                  </HBox>
-                  <Button fx:id="BCadastrarIN" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#cadastrarNovoIndicador" prefHeight="60.0" prefWidth="500.0" style="-fx-background-color: #1E1E1E;" text="Cadastrar novo indicador" textFill="#e5a000">
-                     <VBox.margin>
-                        <Insets top="100.0" />
-                     </VBox.margin>
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="BListarIN" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#listarMeusIndicadores" prefHeight="60.0" prefWidth="500.0" style="-fx-background-color: #1E1E1E;" text="Ver meus indicadores" textFill="#e5a000">
-                     <VBox.margin>
-                        <Insets top="50.0" />
-                     </VBox.margin>
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Button>
-               </children>
-            </VBox>
-      </children>
-    </AnchorPane>
-  </children>
-</VBox>
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: #2c2c2c;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.controller.IndicadoresViewController">
+   <children>
+      <AnchorPane layoutY="-2.0" prefHeight="700.0" prefWidth="317.0">
+         <children>
+            <Button fx:id="BCadastrarIN" alignment="CENTER" contentDisplay="CENTER" layoutX="66.0" layoutY="194.0" mnemonicParsing="false" onAction="#cadastrarNovoIndicador" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Cadastrar novo indicador" textFill="#e5a000">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Button>
+            <Button fx:id="BListarIN" alignment="CENTER" contentDisplay="CENTER" layoutX="66.0" layoutY="267.0" mnemonicParsing="false" onAction="#listarMeusIndicadores" prefHeight="40.0" prefWidth="240.0" style="-fx-background-color: #1E1E1E;" text="Ver meus indicadores" textFill="#e5a000">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Button>
+            <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/coracao.png" />
+               </image>
+            </ImageView>
+            <Separator layoutY="109.0" prefHeight="7.0" prefWidth="320.0" />
+            <Separator layoutX="320.0" layoutY="-2.0" orientation="VERTICAL" prefHeight="706.0" prefWidth="0.0" />
+            <Text fill="#9c27b0" layoutX="106.0" layoutY="66.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Indicadores">
+               <font>
+                  <Font name="System Bold" size="24.0" />
+               </font>
+            </Text>
+            <ImageView fitHeight="56.0" fitWidth="45.0" layoutX="14.0" layoutY="264.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/logo_registro.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="56.0" fitWidth="45.0" layoutX="14.0" layoutY="192.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/coracao.png" />
+               </image>
+            </ImageView>
+         </children>
+      </AnchorPane>
+      <AnchorPane layoutX="779.0" layoutY="-22.0" prefHeight="140.0" prefWidth="130.0">
+         <children>
+            <ImageView fx:id="IFechar" fitHeight="80.0" fitWidth="100.0" layoutX="25.0" layoutY="30.0" onMouseClicked="#voltar" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="30.0">
+               <image>
+                  <Image url="@../images/sair.png" />
+               </image>
+            </ImageView>
+            <Button fx:id="sairB" layoutX="15.0" layoutY="30.0" mnemonicParsing="false" onAction="#handleSair" prefHeight="80.0" prefWidth="100.0" style="-fx-background-color: transparent;" text="" />
+         </children>
+      </AnchorPane>
+   </children>
+</AnchorPane>
