--- a/src/main/resources/fxml/TreinoView.fxml
+++ b/src/main/resources/fxml/TreinoView.fxml
@@ -1,76 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<VBox prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.controller.TreinoViewController">
-
+<AnchorPane prefHeight="200.0" prefWidth="200.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.upe.controller.TreinoViewController">
    <children>
-      <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" style="-fx-background-color: #2C2C2C;">
+      <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: #2C2C2C;">
          <children>
-            <VBox alignment="TOP_CENTER" prefHeight="700.0" prefWidth="900.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-
+            <AnchorPane prefHeight="700.0" prefWidth="317.0">
                <children>
-                  <HBox alignment="TOP_CENTER" prefHeight="143.0" prefWidth="900.0">
-                     <children>
-                        <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="20.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../images/imagesMenu/dumbbells%201.png" />
-                           </image>
-                           <HBox.margin>
-                              <Insets left="30.0" top="5.0" />
-                           </HBox.margin>
-                        </ImageView>
-                        <ImageView fx:id="ITreino" fitHeight="150.0" fitWidth="228.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../images/imagesMenu/Design%20sem%20nome%20(1)%201.png" />
-                           </image>
-                           <HBox.margin>
-                              <Insets left="200.0" right="200.0" top="5.0" />
-                           </HBox.margin>
-                        </ImageView>
-                        <AnchorPane prefHeight="200.0" prefWidth="200.0">
-                           <children>
-                              <ButtonBar fx:id="exitB" opacity="0.0" prefHeight="155.0" prefWidth="200.0">
-                                <buttons>
-                                  <Button mnemonicParsing="false" prefHeight="115.0" prefWidth="233.0" text="Button" />
-                                </buttons>
-                              </ButtonBar>
-                              <ImageView fx:id="IFechar" fitHeight="155.0" fitWidth="182.0" layoutX="20.0" onMouseClicked="#fecharTela" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../images/Design%20sem%20nome%20(6)%201.png" />
-                                 </image>
-                              </ImageView>
-                           </children>
-                        </AnchorPane>
-                     </children>
-                  </HBox>
-                  <Button fx:id="BListarTR" alignment="CENTER" contentDisplay="CENTER" minHeight="60.0" minWidth="500.0" mnemonicParsing="false" onAction="#iniciarNovaSessao" style="-fx-background-color: #1E1E1E;" text="Nova Sessão de Treino" textFill="#e5a000">
-                     <VBox.margin>
-                        <Insets top="100.0" />
-                     </VBox.margin>
+                  <Button fx:id="BListarTR" alignment="CENTER" contentDisplay="CENTER" layoutX="62.0" layoutY="192.0" minHeight="40.0" minWidth="240.0" mnemonicParsing="false" onAction="#iniciarNovaSessao" style="-fx-background-color: #1E1E1E;" text="Nova Sessão de Treino" textFill="#e5a000">
                      <font>
-                        <Font size="15.0" />
+                        <Font name="System Bold" size="15.0" />
                      </font>
                   </Button>
-                  <Button fx:id="BEditarTR" alignment="CENTER" contentDisplay="CENTER" maxHeight="-Infinity" minHeight="60.0" minWidth="500.0" mnemonicParsing="false" onAction="#verHistoricoSessoes" style="-fx-background-color: #1E1E1E;" text="Ver Histórico de Sessões" textFill="#e5a000">
-                     <VBox.margin>
-                        <Insets top="35.0" />
-                     </VBox.margin>
+                  <Button fx:id="BEditarTR" alignment="CENTER" contentDisplay="CENTER" layoutX="62.0" layoutY="267.0" maxHeight="-Infinity" minHeight="40.0" minWidth="240.0" mnemonicParsing="false" onAction="#verHistoricoSessoes" style="-fx-background-color: #1E1E1E;" text="Ver Histórico de Sessões" textFill="#e5a000">
                      <font>
-                        <Font size="15.0" />
+                        <Font name="System Bold" size="15.0" />
                      </font>
                   </Button>
+                  <ImageView fx:id="ITreino" fitHeight="80.0" fitWidth="100.0" layoutX="15.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/muque.png" />
+                     </image>
+                  </ImageView>
+                  <Separator layoutX="314.0" layoutY="1.0" orientation="VERTICAL" prefHeight="700.0" prefWidth="6.0" />
+                  <Separator layoutY="109.0" prefHeight="8.0" prefWidth="314.0" />
+                  <ImageView fitHeight="56.0" fitWidth="45.0" layoutX="10.0" layoutY="265.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/logo_registro.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="56.0" fitWidth="45.0" layoutX="10.0" layoutY="190.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/halter_pequeno.png" />
+                     </image>
+                  </ImageView>
+                  <Text fill="#9c27b0" layoutX="108.0" layoutY="72.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Treinos">
+                     <font>
+                        <Font name="System Bold" size="24.0" />
+                     </font>
+                  </Text>
                </children>
-            </VBox>
+            </AnchorPane>
+            <AnchorPane layoutX="800.0" layoutY="-11.0" prefHeight="80.0" prefWidth="100.0">
+               <children>
+                  <ImageView fitHeight="80.0" fitWidth="100.0" layoutX="10.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="23.0">
+                     <image>
+                        <Image url="@../images/sair.png" />
+                     </image>
+                  </ImageView>
+                  <Button fx:id="IFechar" layoutX="10.0" layoutY="12.0" mnemonicParsing="false" onAction="#fecharTela" prefHeight="80.0" prefWidth="80.0" style="-fx-background-color: transparent;" text="" />
+               </children>
+            </AnchorPane>
          </children>
       </AnchorPane>
    </children>
-</VBox>
+</AnchorPane>
